package de.dhbw.demo.overload;

public class Display {

    public void update() {}

}
