@startuml
!pragma layout smetana
'https://plantuml.com/class-diagram

scale 0.8

class MonitorDisplay {
  update() { ... }
  update(String text) { ... }
  update(String[] textLines) { ... }
}

interface Display {
  update(index, row)
}
abstract class DefaultDisplay {
  update(index, row)
}
class PlatformDisplay {
  update(index, row)
}

Display         <..   DefaultDisplay
DefaultDisplay  <--   PlatformDisplay

@enduml